August_30/August_30/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criterion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acceptance Criterion</label>
        <referenceTo>agf__ADM_Acceptance_Criterion__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Practice_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Practice Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Photo__c</fullName>
        <formula>IMAGE( Photo_Url__c , ' ', 100, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Stage__c</fullName>
        <label>Hiring Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Not accepted</fullName>
                </value>
                <value>
                    <fullName>Joined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_ID__c</fullName>
        <label>LinkedIn ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Url__c</fullName>
        <label>LinkedIn Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Accreditations__c</fullName>
        <label>No.of Accreditations</label>
        <summaryFilterItems>
            <field>Credentials__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Accreditation</value>
        </summaryFilterItems>
        <summaryForeignKey>Credentials__c.Contact_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Certifications__c</fullName>
        <label>No.of Certifications</label>
        <summaryFilterItems>
            <field>Credentials__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Certification</value>
        </summaryFilterItems>
        <summaryForeignKey>Credentials__c.Contact_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Superbadges__c</fullName>
        <label>No.of Superbadges</label>
        <summaryFilterItems>
            <field>Credentials__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Superbadge</value>
        </summaryFilterItems>
        <summaryForeignKey>Credentials__c.Contact_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Technical_Skills__c</fullName>
        <label>Other Technical Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Profile__c</fullName>
        <label>Partner Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partnership_Points__c</fullName>
        <label>Partnership Points</label>
        <summarizedField>Credentials__c.Certification_Points__c</summarizedField>
        <summaryForeignKey>Credentials__c.Contact_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photo_Url__c</fullName>
        <label>Photo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Qualification_Degree__c</fullName>
        <label>Qualification/Degree</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Experience_Years__c</fullName>
        <label>Salesforce Experience(Years)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tek_Title__c</fullName>
        <label>Tek Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SF Associate Admin</fullName>
                </value>
                <value>
                    <fullName>SF Admin</fullName>
                </value>
                <value>
                    <fullName>SF Sr. Admin</fullName>
                </value>
                <value>
                    <fullName>SF App Builder</fullName>
                </value>
                <value>
                    <fullName>SF Consultant</fullName>
                </value>
                <value>
                    <fullName>SF Designer</fullName>
                </value>
                <value>
                    <fullName>SF App Architect</fullName>
                </value>
                <value>
                    <fullName>SF System Architect</fullName>
                </value>
                <value>
                    <fullName>SF Technical Architect</fullName>
                </value>
                <value>
                    <fullName>SF Associate Developer</fullName>
                </value>
                <value>
                    <fullName>SF Developer</fullName>
                </value>
                <value>
                    <fullName>SF Sr. Developer</fullName>
                </value>
                <value>
                    <fullName>SF TSM</fullName>
                </value>
                <value>
                    <fullName>SF PM</fullName>
                </value>
                <value>
                    <fullName>SF Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>Sr BA</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Sr Developer</fullName>
                </value>
                <value>
                    <fullName>QA </fullName>
                </value>
                <value>
                    <fullName>Sr QA</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Practice Architect</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Trailhead_Badges__c</fullName>
        <label>Total Trailhead Badges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trailhead_Points__c</fullName>
        <label>Total Trailhead Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trailhead_Link__c</fullName>
        <label>Trailhead Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Trailhead_Rank__c</fullName>
        <formula>IF(Total_Trailhead_Badges__c &gt;= 100 &amp;&amp; Total_Trailhead_Points__c &gt;= 50000 , '7-Ranger', 
IF(Total_Trailhead_Badges__c &gt;= 50 &amp;&amp; Total_Trailhead_Points__c &gt;= 35000 , '6-Expeditioner', 
IF(Total_Trailhead_Badges__c &gt;= 25 &amp;&amp; Total_Trailhead_Points__c &gt;= 18000 , '5-Mountaineer', 
IF(Total_Trailhead_Badges__c &gt;= 10 &amp;&amp; Total_Trailhead_Points__c &gt;= 9000 , '4-Adventurer', 
IF(Total_Trailhead_Badges__c &gt;= 5 &amp;&amp; Total_Trailhead_Points__c &gt;= 3000 , '3-Explorer', 
IF(Total_Trailhead_Badges__c &gt;= 1 &amp;&amp; Total_Trailhead_Points__c &gt;= 200 , '2-Hiker', '1-Scout'))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailhead Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SF Practice Employee</fullName>
                </value>
                <value>
                    <fullName>TEK Employee</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Potential Employee</fullName>
                </value>
                <value>
                    <fullName>SF Practice Contractor</fullName>
                </value>
                <value>
                    <fullName>TEK Contractor</fullName>
                </value>
                <value>
                    <fullName>Linked Contractor</fullName>
                </value>
                <value>
                    <fullName>Followed Contractor</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YTD_PTO__c</fullName>
        <label>YTD PTO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Candidate</fullName>
        <columns>FULL_NAME</columns>
        <columns>LinkedIn_Url__c</columns>
        <columns>Certified__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Candidate</value>
        </filters>
        <label>Candidate</label>
    </listViews>
    <listViews>
        <fullName>Contractor</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Contractor</value>
        </filters>
        <label>Contractor</label>
    </listViews>
    <listViews>
        <fullName>Customer</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Customer</value>
        </filters>
        <label>Customer</label>
    </listViews>
    <listViews>
        <fullName>Employee</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Employee</value>
        </filters>
        <label>Employee</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_Birthdays_Next_7_Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesIndividual</value>
        </filters>
        <label>Upcoming Birthdays (Next 7 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__Upcoming_RMDs_Next_7_Days</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>FinServ__Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>lessThan</operation>
            <value>70.5</value>
        </filters>
        <filters>
            <field>FinServ__Age__c</field>
            <operation>greaterThan</operation>
            <value>70</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:90</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:82</value>
        </filters>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>greaterOrEqual</operation>
            <value>NEXT_N_DAYS:275</value>
        </filters>
        <label>Upcoming RMDs (Next 7 Days)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Followed_Contractor</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>0121I000000aGaz</value>
        </filters>
        <label>Followed Contractor</label>
    </listViews>
    <listViews>
        <fullName>General</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.General</value>
        </filters>
        <label>General</label>
    </listViews>
    <listViews>
        <fullName>India_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>India Team</label>
    </listViews>
    <listViews>
        <fullName>Linked_Contractor</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>0121I000000aGb1</value>
        </filters>
        <label>Linked Contractor</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notContain</operation>
            <value>teksystems.com</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Tek Consultants 2/2/2018</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Potential_Employee</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.General</value>
        </filters>
        <label>Potential Employee</label>
    </listViews>
    <listViews>
        <fullName>Practice_Employee</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>No_of_Certifications__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Practice_Employee</value>
        </filters>
        <label>Practice Employee</label>
    </listViews>
    <recordTypes>
        <fullName>Candidate</fullName>
        <active>true</active>
        <description>Sourced from LinkedIn</description>
        <label>Candidate</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Contractor</fullName>
        <active>true</active>
        <label>Contractor</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>TEK customer contacts</description>
        <label>Customer</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <description>Existing SF Practice employees</description>
        <label>Employee</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Contact data for an institution or a business account</description>
        <label>Business</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Contact data for a retail client</description>
        <label>Individual</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>Potential employees and Candidates</description>
        <label>General</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Potential_Employee</fullName>
        <active>true</active>
        <label>Potential Employee</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Practice_Contractor</fullName>
        <active>true</active>
        <description>Contractor who belongs to the practice and is working for a SFDC practice project/contract</description>
        <label>Practice Contractor</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Practice_Employee</fullName>
        <active>true</active>
        <description>Employee that belongs to the practice</description>
        <label>Practice Employee</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>TEK_Contractor</fullName>
        <active>true</active>
        <description>Contractor those belongs to TEKsystems staffing and not associated with SFDC practice</description>
        <label>TEK Contractor</label>
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>TEK_Employee</fullName>
        <active>true</active>
        <description>Employee that works for TEKsystems and does not belong to the SFDC practice</description>
        <label>TEK Employee</label>
        
        
        
    </recordTypes>
</CustomObject>